Minor CSS fixes on small devices

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -54,6 +54,15 @@ p {
     margin: 10px 0 20px 0;
 }
 
+.not-full + .media-body p {
+    margin: 0 0 20px 0;
+
+    @media (min-width: 769px){
+      margin: 10px 0 20px 0;
+
+    }
+  }
+
 a:hover {
 	text-decoration: none;
 }
@@ -141,6 +150,38 @@ table {
     padding-bottom: 0;
   }
 }
+
+/* --- explanation.html --- */
+
+.media-body {
+  overflow: visible;
+}
+.media {
+
+  .media-object {
+    width: 100%;
+    max-width: 300px;
+    margin: 0 auto;
+    padding: 10px;
+  }
+
+  & .pull-right,
+  & .pull-left {
+    width: 100%;
+
+    &.not-full {
+      width: 49%;
+      @media (min-width: 480px){
+        width: auto;
+      }
+    }
+
+    @media (min-width: 480px){
+      width: auto;
+    }
+  }
+}
+
 /* --- jumbotron --- */
 
 .jumbotron {
@@ -163,8 +204,33 @@ table {
 
 /* --- about images --- */
 
-#about-content img {
-	margin-right: 20px;
+#about-content {
+
+  .pull-left {
+    margin-bottom: 10px;
+    width: 100%;
+    @media (min-width: 500px){
+      width: auto;
+    }
+
+    img {
+      margin: 0 auto;
+
+      @media (min-width: 500px){
+        margin-right: 20px;
+      }
+
+    }
+    @media (min-width: 768px){
+      // margin-bottom: 55px;
+    }
+  }
+  @media (min-width: 768px){
+    & .media-object.thumbnail {
+      max-width: 300px;
+    }
+
+  }
 }
 
 /* --- footer --- */
@@ -220,6 +286,9 @@ table {
         opacity: 1;
     }
 }
+
+/* --- contact --- */
+
 address {
   margin-bottom: 25px;
 
@@ -241,6 +310,19 @@ address {
     margin-top: 5px;
     color: #7b7b77;
   }
+}
 
+/* --- youtube videos --- */
+iframe {
+  width: 100%;
+  min-height: 200px;
+
+  @media (min-width: 468px){
+    min-height: 300px;
+  }
+  @media (min-width: 600px){
+    min-height: 400px;
+
+  }
 
 }
